FIX: fix eventModal while description is too long

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -14,3 +14,8 @@
     position: absolute;
     z-index: 999;
 }
+
+#event-modal-card {
+    max-width: 500px;
+    min-width: 150px;
+}
